feat: finalize backend APIs with flexible updates and AI integration